# IO

./: .gitignore  README.md  docker-compose.yml  local.env
backend/: Dockerfile  create_admin.py  entrypoint.sh  pyproject.toml
backend/api/: urls.py
backend/config/: settings.py
backend/core/: admin.py  models.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py
frontend/: .eslintrc.json  .prettierrc  Dockerfile  angular.json  nginx.conf  package.json
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
frontend/src/app/components/TaskCard/: taskCard.component.html  taskCard.component.scss  taskCard.component.ts
frontend/src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
frontend/src/app/interfaces/: taskInterface.ts
frontend/src/app/services/: tasks.service.ts
